--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>Spotify Web</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Logo</h1>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+        <h2></h2>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>   
+    </header>
     <main></main>
     <footer></footer>
 </body>
