inizio struttura, header non terminato

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <h1>Logo</h1>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Home</li>
+                <li>Cerca</li>
+                <li>La tua libreria</li>
             </ul>
         </nav>
-        <h2></h2>
+        <h2>Playlist</h2>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Crea Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
+                <li>Nome Playlist</li>
             </ul>
         </nav>   
     </header>
