struttura main, da completare

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <li>La tua libreria</li>
             </ul>
         </nav>
-        <h2>Playlist</h2>
         <nav>
             <ul>
+                <li><strong>Playlist</strong></li>
                 <li>Crea Playlist</li>
                 <li>Nome Playlist</li>
                 <li>Nome Playlist</li>
@@ -30,7 +30,13 @@
             </ul>
         </nav>   
     </header>
-    <main></main>
+    <main>
+        <div class="header-of-main">
+            <button id="button-upgrade">
+                EFFETTUA L'UPGRADE
+            </button>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
