--- a/index.html
+++ b/index.html
@@ -7,36 +7,37 @@
     <title>Spotify Web</title>
 </head>
 <body>
-    <header>
-        <h1>Logo</h1>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Cerca</li>
-                <li>La tua libreria</li>
-            </ul>
-        </nav>
-        <nav>
-            <ul>
-                <li><strong>Playlist</strong></li>
-                <li>Crea Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-                <li>Nome Playlist</li>
-            </ul>
-        </nav>   
-    </header>
-    <main>
-        <div class="header-of-main">
-            <button id="button-upgrade">
-                EFFETTUA L'UPGRADE
-            </button>
-        </div>
-    </main>
-    <footer></footer>
+    <div class="clearfix">
+        <header>
+            <h1>Logo</h1>
+            <nav class="nav1">
+                <ul class="ul1">
+                    <li class="li-title">Home</li>
+                    <li class="li-item">Cerca</li>
+                    <li class="li-item">La tua libreria</li>
+                </ul>
+            </nav>
+            <nav class="nav2">
+                <ul class="ul2">
+                    <li class="li-title"><strong>Playlist</strong></li>
+                    <li class="li-item">Crea Playlist</li>
+                    <li class="li-item">Nome Playlist</li>
+                    <li class="li-item">Nome Playlist</li>
+                    <li class="li-item">Nome Playlist</li>
+                    <li class="li-item">Nome Playlist</li>
+                    <li class="li-item">Nome Playlist</li>
+                    <li class="li-item">Nome Playlist</li>
+                    <li class="li-item">Nome Playlist</li>
+                </ul>
+            </nav>   
+    
+        </header>
+        <main>
+    
+        </main>
+    </div>
+    <footer>
+
+    </footer>
 </body>
 </html>
