--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 <body>
     <div class="clearfix">
         <header>
-            <h1>Logo</h1>
-            <nav class="nav1">
-                <ul class="ul1">
-                    <li class="li-title">Home</li>
-                    <li class="li-item">Cerca</li>
-                    <li class="li-item">La tua libreria</li>
-                </ul>
-            </nav>
-            <nav class="nav2">
-                <ul class="ul2">
-                    <li class="li-title"><strong>Playlist</strong></li>
-                    <li class="li-item">Crea Playlist</li>
-                    <li class="li-item">Nome Playlist</li>
-                    <li class="li-item">Nome Playlist</li>
-                    <li class="li-item">Nome Playlist</li>
-                    <li class="li-item">Nome Playlist</li>
-                    <li class="li-item">Nome Playlist</li>
-                    <li class="li-item">Nome Playlist</li>
-                    <li class="li-item">Nome Playlist</li>
-                </ul>
-            </nav>   
-    
+            <div class="container1">
+                <h1>Logo</h1>
+                <nav class="nav1">
+                    <ul class="ul1">
+                        <li class="li-title">Home</li>
+                        <li class="li-item">Cerca</li>
+                        <li class="li-item">La tua libreria</li>
+                    </ul>
+                </nav>
+                <nav class="nav2">
+                    <ul class="ul2">
+                        <li class="li-title"><strong>Playlist</strong></li>
+                        <li class="li-item">Crea Playlist</li>
+                        <li class="li-item">Nome Playlist</li>
+                        <li class="li-item">Nome Playlist</li>
+                        <li class="li-item">Nome Playlist</li>
+                        <li class="li-item">Nome Playlist</li>
+                        <li class="li-item">Nome Playlist</li>
+                        <li class="li-item">Nome Playlist</li>
+                        <li class="li-item">Nome Playlist</li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main>
     
