fixed colors of main and footer

--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
             </div>
         </header>
         <main>
+            <div class="header-of-main">
+                <button id="button-upgrade">
+                    EFFETTUA L'UPGRADE
+                </button>
+            </div>
+            <div class="container">
+                <nav class="nav3">
+                    <ul>
+                        <li>IN EVIDENZA</li>
+                        <li>PODCAST</li>
+                        <li>CLASSIFICHE</li>
+                        <li>GENERI E MOOD</li>
+                        <li>NUOVE USCITE</li>
+                        <li>SCOPRI</li>
+                    </ul>
+                </nav>
+            </div>
         </main>
     </div>
     <footer>
