--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     EFFETTUA L'UPGRADE
                 </button>
             </div>
-            <div class="container">
+            <div class="container2">
                 <nav class="nav3">
-                    <ul>
+                    <ul class="ul3">
                         <li>IN EVIDENZA</li>
                         <li>PODCAST</li>
                         <li>CLASSIFICHE</li>
