modified name for two div

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             </div>
         </header>
         <main>
-            <div class="header-of-main">
+            <div class="banner">
                 <button id="button-upgrade">
                     EFFETTUA L'UPGRADE
                 </button>
             </div>
-            <div class="container2">
+            <div class="header-of-main">
                 <nav class="nav3">
                     <ul class="ul3">
                         <li>IN EVIDENZA</li>
