--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
         </main>
     </div>
     <footer>
-
+        <div class="song-name">
+            Song album + song name
+        </div>
+        <div class="play-bar">
+            
+        </div>
     </footer>
 </body>
 </html>
