creation of soundbar

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
         <div class="play-bar">
             
         </div>
+        <div class="sound-bar">
+
+        </div>
     </footer>
 </body>
 </html>
